Add avgMonthlyRainfalls
